# OpenFM

./: .autopushignore  .editorconfig  .eslintrc.json  .gitignore  .prettierignore  ALL_BUILDS_READY.md  ALL_DONE.md  BUILD_COMPLETE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPILATION_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DESKTOP_APP_READY.md  EVERYTHING_COMPLETE.md  FIXES_APPLIED.md  GETTING_STARTED.md  ICONS_GENERATED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  LUCIDE_MIGRATION_COMPLETE.md  OBS_PLUGIN_COMPLETE.md  PORT_FIX.md  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_COMMANDS.md  README.md  READY.md  RELEASES.md  SECURITY.md  START_HERE.md  STATUS.md  TASKS_COMPLETE.md  TASK_SUMMARY.md  UI_READY.md  package-lock.json  package.json  (+3 more)
.github/workflows/: build.yml
apps/desktop/: ICONS_NEEDED.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md  generate-icons.ps1  icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/obs-plugin/: BUILD_GUIDE.md  CMakeLists.txt  INSTALLER_README.md  OBS_32_BUILD_GUIDE.md  OBS_PLUGIN_MANUAL_INSTALL.txt  README.md  build-macos.sh  build-windows.ps1  install-plugin.ps1
apps/obs-plugin/src/: audio_manager.cpp  audio_manager.hpp  dock.cpp  dock.hpp  ducking.cpp  ducking.hpp  plugin.cpp  plugin.hpp
apps/service/: package.json  preferences.json  tsconfig.json  vite.config.ts
apps/service/public/: index.html
apps/service/src/: index.ts  websocket.ts
apps/service/src/playback/: manager.ts
apps/service/src/routes/: index.ts
apps/service/src/state/: manager.ts
apps/service/src/ui/: ServicePlayerProvider.tsx  index.html  main.tsx  useAudioPlayer.ts
apps/service/src/ui/hooks/: useServiceAPI.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  LUCIDE_ICONS.md
guidance/: 01_project_overview.md  02_implementation_checklist.md
installers/macos/: build-pkg.sh
installers/windows/: build-installer.ps1  setup.iss
openfm/: package-lock.json  package.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/home/: page.tsx
src/components/: featured-grids.tsx  hero.tsx  mood-background.tsx  mood-chips.tsx  mood-selector.tsx  now-playing-card.tsx  now-playing-topbar.tsx  queue-preview.tsx  schedule-teaser.tsx  search-bar.tsx  sidebar.tsx  site-header.tsx  sponsor-spot.tsx  sticky-search-and-mini.tsx
src/context/: player-context.tsx
src/data/: tracks.ts
src/lib/: moods.ts  playlist.ts  types.ts
tools/autopush/: auto-push.js
